--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,10 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
+### Project specific ignore ###
+src/main/ressources/*
+src/main/java/day*/day*.md
+
 ### IntelliJ IDEA ###
 .idea/modules.xml
 .idea/jarRepositories.xml
